--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,4 +1,2 @@
 server.port=9090
-spring.main.banner-mode=off
-spring.output.ansi.enabled=ALWAYS
-spring.data.mongodb.uri=mongodb://BingoBongo:Abcdf@mongodb:27017/cityJokesDB?ssl=false&connectTimeoutMS=300000&minPoolSize=0&maxPoolSize=100&maxIdleTimeMS=900000&readPreference=primaryPreferred&authSource=admin
+spring.data.mongodb.uri=mongodb://BingoBongo:Abcdf@mongodb:27017/orderDB?ssl=false&connectTimeoutMS=300000&minPoolSize=0&maxPoolSize=100&maxIdleTimeMS=900000&readPreference=primaryPreferred&authSource=admin
